--- a/.github/workflows/formatting_linting.yml
+++ b/.github/workflows/formatting_linting.yml
@@ -2,17 +2,21 @@
 # 1. Is well-formated
 # 2. Is linted
 
-name: Code validation
+name: Linting
 
 on:
   workflow_call:
     inputs:
       requirements_file_path:
-        required: true
+        description: "Path of the project dependencies file"
+        default: ""
+        required: false
         type: string
-      
+        
       toml_config_file_path:
-        required: true
+        description: "Path of the configuration file for Black, isort and Pylint"
+        default: ""
+        required: false
         type: string
     
 jobs:
@@ -28,12 +32,21 @@ jobs:
     
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install -r ${{ inputs.requirements_file_path }}
+        if [-n "${{ inputs.requirements_file_path }}"]
+        then
+          python -m pip install --upgrade pip
+          pip install -r ${{ inputs.requirements_file_path }}
+        else
+          echo "No dependencies file provided"
+        fi
     
     - name: Analysing the code with pylint
       run: |
-        pylint --rcfile ${{ inputs.toml_config_file_path }} $(git ls-files '*.py')
+        if [-n "${{ inputs.toml_config_file_path }}"]
+        then
+          pylint --rcfile ${{ inputs.toml_config_file_path }} $(git ls-files '*.py')
+        else
+          pylint $(git ls-files '*.py')
 
   run-isort:
     runs-on: ubuntu-latest
