--- a/.github/workflows/formatting_linting.yml
+++ b/.github/workflows/formatting_linting.yml
@@ -30,11 +30,15 @@ jobs:
       with:
         python-version: 3.9
     
+    - name: Install Pylint
+      run: |
+        python -m pip install --upgrade pip
+        pip install pylint        
+    
     - name: Install dependencies
       run: |
         if [ "${{ inputs.requirements_file_path }}" != "" ]
         then
-          python -m pip install --upgrade pip
           pip install -r ${{ inputs.requirements_file_path }}
         else
           echo "No dependencies file provided"
