--- a/.github/workflows/formatting_linting.yml
+++ b/.github/workflows/formatting_linting.yml
@@ -7,17 +7,22 @@ name: Linting
 on:
   workflow_call:
     inputs:
+      python-version:
+        type: string
+        required: false
+        default: "3.9"
+
       requirements_file_path:
         description: "Path of the project dependencies file"
-        default: ""
-        required: false
         type: string
+        required: false
+        default: ""
         
       toml_config_file_path:
         description: "Path of the configuration file for Black, isort and Pylint"
-        default: ""
-        required: false
         type: string
+        required: false
+        default: ""
     
 jobs:
   run-pylint:
@@ -28,11 +33,11 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: 3.9
+        python-version: ${{ inputs.python-version }}
     
     - name: Install dependencies
       run: |
-        if [ "${{ inputs.requirements_file_path }}" != "" ]
+        if [ -f "${{ inputs.requirements_file_path }}" ]
         then
           python -m pip install --upgrade pip
           pip install -r ${{ inputs.requirements_file_path }}
@@ -44,7 +49,7 @@ jobs:
     
     - name: Analysing the code with pylint
       run: |
-        if [ "${{ inputs.toml_config_file_path }}" != "" ]
+        if [ -f "${{ inputs.toml_config_file_path }}" ]
         then
           pylint --rcfile ${{ inputs.toml_config_file_path }} $(git ls-files '*.py')
         else
@@ -58,7 +63,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions/setup-python@v4
       with:
-        python-version: 3.9
+        python-version: ${{ inputs.python-version }}
     - uses: isort/isort-action@master
       with:
           requirementsFiles: ${{ inputs.requirements_file_path }}
